# mconnect-gtk

./: Cargo.toml  README.md  build.rs
src/: main.rs  main.rs.old  main_window.glade  mconnect_dbus.rs
src/components/: file_btn.rs  input_btn.rs  mod.rs
src/utils/: component_utils.rs  conn_util.rs  device.rs  device_manager.rs  mod.rs  update_result.rs
src/views/: mod.rs
src/views/device_display/: mod.rs
src/views/devices_list/: devices_list_item.rs  mod.rs
src/views/main_window/: header_device_controls.rs  mod.rs  notification.rs  share_file_btn.rs
