[package]
name = "mconnect-gtk"
version = "0.1.0"
authors = ["PJTSearch <pjtsignups@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "^0.8.0"
relm = "^0.19.0"
relm-derive = "^0.19.0"
dbus = "0.9.0"
derive_builder = "0.9.0"