[package]
name = "mconnect-gtk"
version = "0.1.0"
authors = ["PJTSearch <pjtsignups@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vgtk = { git = "https://github.com/bodil/vgtk.git" }
dbus = "0.9.0"
derive_builder = "0.9.0"